--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div id="video-container">
         <!-- Replace 'your-video.mp4' with the path to your locally stored video -->
-        <iframe id="video" src="https://drive.google.com/file/d/1O_9EiOTcQOHhghpIqDXi6X0zkeAKpLWc/preview" width="100%" height="100%" allow="autoplay"></iframe>
+        <iframe id="video" src="https://drive.google.com/file/d/1O_9EiOTcQOHhghpIqDXi6X0zkeAKpLWc/preview" width="100%" height="100%" allow="autoplay" allowfullscreen></iframe>
         <div id="pop-out-cover"></div>   
     </div>
 </body>
