--- a/index.html
+++ b/index.html
@@ -22,14 +22,12 @@
 </head>
 <body>
     <header>
-        <!-- Place your company logo here -->
         <img src="1941293.png" alt="Company Logo" width="80" 
         height="110">
     </header>
 
     <div id="video-container">
-        <!-- Replace 'your-video.mp4' with the path to your locally stored video -->
-        <iframe id="video" src="https://drive.google.com/file/d/1O_9EiOTcQOHhghpIqDXi6X0zkeAKpLWc/preview" width="100%" height="100%" allow="autoplay" allowfullscreen></iframe>
+        <iframe width="100%" height="100%" src="https://drive.google.com/file/d/1O_9EiOTcQOHhghpIqDXi6X0zkeAKpLWc/preview" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <div id="pop-out-cover"></div>   
     </div>
 </body>
