--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </head>
 <body>
     <header>
-        <img src="1941293.png" alt="Company Logo" width="80" 
-        height="110">
+        <img src="1941293.png" alt="Company Logo" width="10%" 
+        height="10%">
     </header>
 
     <div id="video-container">
