--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 </head>
 <body>
     <header>
-        <img src="1941293.png" alt="Company Logo" width="12%" 
-        height="12%">
+        <h1>Welcome to <img src="1941293.png" alt="Company Logo" width="12%" 
+        height="12%"> Tillsonburg</h1>
     </header>
 
     <div id="video-container">
