--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
     </header>
 
     <div id="video-container">
-        <video> 
-            <src="https://drive.google.com/file/d/1O_9EiOTcQOHhghpIqDXi6X0zkeAKpLWc/preview" type=video/mp4 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-        </video>
+        <iframe src="https://drive.google.com/file/d/1O_9EiOTcQOHhghpIqDXi6X0zkeAKpLWc/preview" type=video/mp4 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <div id="pop-out-cover"></div>   
     </div>
 </body>
