--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         height="12%"> Tillsonburg</h1>
     </header>
 
-    <div id="video-container">
-        <iframe src="https://drive.google.com/file/d/1O_9EiOTcQOHhghpIqDXi6X0zkeAKpLWc/preview" type=video/mp4 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <div id="pop-out-cover"></div>   
+     <div id="video-container">
+        <iframe width="100%" height="100%" src="https://drive.google.com/file/d/1O_9EiOTcQOHhghpIqDXi6X0zkeAKpLWc/preview" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div id="pop-out-cover"></div>  
     </div>
 </body>
 </html>
