--- a/index.html
+++ b/index.html
@@ -27,5 +27,19 @@
         <iframe width="100%" height="100%" src="https://drive.google.com/file/d/1O_9EiOTcQOHhghpIqDXi6X0zkeAKpLWc/preview" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <div id="pop-out-cover"></div>  
     </div>
+
+    <script>
+        var video = document.querySelector('iframe');
+
+        video.addEventListener('webkitfullscreenchange', function (e) {
+            if (document.webkitFullscreenElement) {
+                // Video is in fullscreen mode
+                // Add any necessary styles or adjustments here
+            } else {
+                // Video exited fullscreen mode
+                // Remove any styles or adjustments here
+            }
+        });
+    </script>
 </body>
 </html>
