--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             position: absolute;
             top: 0px;
             right: 0px;
-            background-color: transparent;
+            background-color: black;
             width: 50px;
             height: 55px;
             z-index: 2;
