--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             position: absolute;
             top: 195px;
             right: 5px;
-            background-color: black;
+            background-color: transparent;
             width: 100px;
             height: 100px;
             z-index: 2;
