--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     </header>
 
      <div id="video-container">
-        <video controls autoplay>
+<!--         <video controls autoplay>
             <source src="MRE Tillsonburg Promotional Video September 2023.mp4" type="video/mp4">
             Your browser does not support the video tag.
-          </video>
-        <!-- <iframe width="100%" height="100%" src="https://drive.google.com/file/d/1O_9EiOTcQOHhghpIqDXi6X0zkeAKpLWc/preview" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+          </video> -->
+        <iframe width="100%" height="100%" src="https://drive.google.com/file/d/1O_9EiOTcQOHhghpIqDXi6X0zkeAKpLWc/preview" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <div id="pop-out-cover"></div>  
     </div>
 
